--- a/auth.ini
+++ b/auth.ini
@@ -1,6 +1,6 @@
 [main]
 activeDirectoryRealm = org.apache.shiro.realm.activedirectory.ActiveDirectoryRealm
 activeDirectoryRealm.systemUsername = uid=pkirkpat
-activeDirectoryRealm.systemPassword = Ta15citp~Iahat.
+activeDirectoryRealm.systemPassword = P@$5w0rd
 activeDirectoryRealm.searchBase = ou=people,dc=lcsee,dc=wvu,dc=edu
 activeDirectoryRealm.url = ldap://ldapconsumer001.lcsee.wvu.edu
